feat: add reset password html form